test/ui/test/packages/undefined-package-local-components/package.metadata

name: lost-in-the-local-forest,
version: "7171717.0.0",

components: {
    lost-in-the-local-forest: {
        type: library,
        path: "source/library.lushui",

        dependencies: {
            who: {},
            wait-who: {},
            no-wait-who: { component: i-mean-who },
        },
    },
},
